src/test/ui/error-codes/E0665.stderr
error[E0665]: `Default` cannot be derived for enums, only structs
  --> $DIR/E0665.rs:1:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^

error: aborting due to previous error

